tests/compiler/errors/propagate_error_bad_type.casa
# expect: TYPE_MISMATCH

fn bad -> int {
    42 ?
}
